--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,16 @@
 {
-    "name": "motze92/office365-mail",
+    "name": "patrickkivits/office365-mail",
     "description": "Office365 transport for Laravel",
     "license": "MIT",
     "authors": [
         {
             "name": "Moritz Mair",
             "homepage": "https://github.com/motze92",
+            "role": "Developer"
+        },
+        {
+            "name": "Patrick Kivits",
+            "homepage": "https://github.com/patrickkivits",
             "role": "Developer"
         }
     ],
